feat: delta panel
